--- a/options.conf
+++ b/options.conf
@@ -4,6 +4,7 @@ url = https://files.pythonhosted.org/packages/f6/4d/a429e428994d8a6b62bc244d0332
 archives = 
 giturl = 
 domain = 
+alias = 
 
 [autospec]
 # build 32 bit libraries
